Prevent the "View/Edit/Clone" links from overlapping the page title when editing.

--- a/sites/all/themes/scratchpads_admin/override.css
+++ b/sites/all/themes/scratchpads_admin/override.css
@@ -12,6 +12,10 @@
 	background: none;
 }
 
+.page-title{
+  padding-right:300px !important;
+}
+
 /* Admin content table */
 
 table.scratchpads-admin-content  caption{
